CRONAPP-4353 - Revisar estilos dos componentes

--- a/components/templates/cron-autocomplete.designtime.html
+++ b/components/templates/cron-autocomplete.designtime.html
@@ -1,6 +1,6 @@
-<span unselectable="on" class="k-dropdown-wrap k-state-default">
-    <span unselectable="on" class="k-input"></span>
-    <span unselectable="on" class="k-select" aria-label="select">
-        <span class="k-icon k-i-arrow-60-down"></span>
+<div class="form-group">
+    <label>Label designtime</label>
+    <span class="k-widget k-autocomplete cronAutoComplete" style="width: 100%;">
+        <input class="cronAutoComplete k-input" placeholder="Selecione um Item" type="text">
     </span>
-</span>
+</div>
