--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,7 @@
 @import 'modalTemplate.css';
 @import 'animate.css';
 @import './privacy/privacy.css';
+@import '../components/css/color-default.css';
 
 /* Directive crn-input-password */
 @import '../components/css/crn-input-password.css';
@@ -257,10 +258,6 @@ a {
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
-/* crn-enterprise-combobox-multiple maintenance */
-.k-multiselect-wrap .k-button {
-    font-size: 1em;
-}
 
 .page-header {
     border-bottom: 1px solid #eee;
