--- a/css/themes/custom/material/custom-material.css
+++ b/css/themes/custom/material/custom-material.css
@@ -258,18 +258,15 @@ div .messages {
     border-color: #f31700;
 }
 
+.navbar-default .navbar-nav ul.dropdown-menu a i,
+.navbar-default .navbar-nav ul.dropdown-menu li a{
+    color: #393939;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+.navbar-default .navbar-nav ul.dropdown-menu a:hover i,
+.navbar-default .navbar-nav ul.dropdown-menu li a:hover{
+    color: #ffffff;
+}
 
 .dropdown-menu li a {
     display: block;
@@ -277,7 +274,7 @@ div .messages {
     clear: both;
     font-weight: 400;
     line-height: 1.42857143;
-    color: #393939 !important;
+    color: #393939;
     white-space: nowrap;
 }
 
