--- a/components/templates/cron-combobox-multiple.template.html
+++ b/components/templates/cron-combobox-multiple.template.html
@@ -1,5 +1,5 @@
-<div class="form-group">
+<div class="form-group combobox-gray" combobox-theme="combobox-gray">
     <label for="cron-${COMPONENTID}-container">Label</label>
-    <cron-multi-select options="{}" ng-required="false" id="cron-${COMPONENTID}" ng-model="vars.multipleCombobox${RANDOM}" class="crn-select form-control k-content" style="">
+    <cron-multi-select options="{}" ng-required="false" id="cron-${COMPONENTID}" ng-model="vars.multipleCombobox${RANDOM}" class="crn-select form-control k-content">
     </cron-multi-select>
 </div> 
