--- a/components/templates/cron-dynamic-combobox.template.html
+++ b/components/templates/cron-dynamic-combobox.template.html
@@ -1,4 +1,4 @@
-<div class="form-group" id="${COMPONENTID}">
+<div class="form-group" id="cron-${COMPONENTID}">
     <label for="cron-${COMPONENTID}">Label</label>
     <cron-dynamic-select options="{}" ng-required="false" id="cron-${COMPONENTID}" ng-model="vars.dynCombobox${RANDOM}" class="k-textbox crn-select form-control" style="">
     </cron-dynamic-select>
