--- a/css/themes/custom/material/custom-material.css
+++ b/css/themes/custom/material/custom-material.css
@@ -257,3 +257,23 @@ div .messages {
 .k-dropdown-wrap.ng-invalid-required {
     border-color: #f31700;
 }
+
+.navbar-default .navbar-nav ul.dropdown-menu a i,
+.navbar-default .navbar-nav ul.dropdown-menu li a{
+    color: #393939;
+}
+
+.navbar-default .navbar-nav ul.dropdown-menu a:hover i,
+.navbar-default .navbar-nav ul.dropdown-menu li a:hover{
+    color: #ffffff;
+}
+
+.dropdown-menu li a {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    color: #393939;
+    white-space: nowrap;
+}
