--- a/components/templates/datetime.template.html
+++ b/components/templates/datetime.template.html
@@ -1,4 +1,4 @@
 <div class="form-group">
-	<label for="datetime${RANDOM}">Label</label>
-    <input type="datetime" id="datetime${RANDOM}" class="form-control k-textbox" mask="" ng-model="vars.datetime${RANDOM}" ng-required="false">
+	<label for="datetime-${COMPONENTID}">Label</label>
+    <input type="datetime" id="datetime-${COMPONENTID}" class="form-control k-textbox" mask="" ng-model="vars.datetime${RANDOM}" ng-required="false">
 </div>
