CRONAPP-4423 - Criar componente Colunas

--- a/components/templates/grid-vertical.template.html
+++ b/components/templates/grid-vertical.template.html
@@ -1,2 +1,4 @@
-<div class="col-md-12" data-container="true" data-replace="true">Content goes here</div> 
-<div class="col-md-12" data-container="true" data-replace="true">Content goes here</div>
+<div class="layout-vertical">
+    <div class="col-layout-vertical col-md-12" data-container="true" data-replace="true">Content goes here</div>
+    <div class="col-layout-vertical col-md-12" data-container="true" data-replace="true">Content goes here</div>
+</div>
