--- a/components/templates/grid-horizontal.template.html
+++ b/components/templates/grid-horizontal.template.html
@@ -1,2 +1,4 @@
-<div class="col-md-6" data-container="true" data-replace="true">Content goes here</div> 
-<div class="col-md-6" data-container="true" data-replace="true">Content goes here</div>
+<div class="layout-horizontal">
+    <div class="col-layout-horizontal" data-container="true" data-replace="true">Content goes here</div>
+    <div class="col-layout-horizontal" data-container="true" data-replace="true">Content goes here</div>
+</div>
