--- a/css/app.css
+++ b/css/app.css
@@ -603,3 +603,11 @@ img.user-avatar {
 .k-pdf-export, .k-pdf-export * {
     font-family: 'Arial-Report';
 }
+
+.layout-horizontal {
+    display: flex;
+}
+
+.col-layout-horizontal {
+    width: 100%;
+}
