CRONAPP-4423 - Criar componente Colunas

--- a/css/app.css
+++ b/css/app.css
@@ -341,3 +341,11 @@ fieldset[disabled] .btn-default:hover {
 .k-pdf-export * {
     font-family: 'Arial-Report';
 }
+
+.layout-horizontal {
+    display: flex;
+}
+
+.col-layout-horizontal {
+    width: 100%;
+}
