--- a/css/themes/custom/material/components_css/crn-navbar.css
+++ b/css/themes/custom/material/components_css/crn-navbar.css
@@ -10,7 +10,12 @@
     text-transform: uppercase;
 }
 
-.navbar-default .navbar-nav > li > a > i {
+.navbar-default .navbar-nav a i {
+    color: #fff;
+}
+
+.crn-navigator-vertical #navbar-profile i,
+.navbar-default .navbar-nav>li>a>i {
     color: #fff;
     display: none;
 }
@@ -24,29 +29,28 @@
     color: #fff;
 }
 
-.navbar-default .navbar-nav > li > a {
+.navbar-default .navbar-nav>li>a {
     color: #fff;
 }
 
-.navbar-default .navbar-nav > li > a:focus,
-.navbar-default .navbar-nav > li > a:hover {
+.navbar-default .navbar-nav>li>a:focus,
+.navbar-default .navbar-nav>li>a:hover {
     color: #fff;
     background-color: #282d57;
 }
 
-.navbar-default .navbar-nav > .open > a,
-.navbar-default .navbar-nav > .open > a:focus,
-.navbar-default .navbar-nav > .open > a:hover {
+.navbar-default .navbar-nav>.open>a,
+.navbar-default .navbar-nav>.open>a:focus,
+.navbar-default .navbar-nav>.open>a:hover {
     color: #fff;
     background-color: #282d57;
 }
 
 @media only screen and (max-width: 768px) {
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
         color: #fff;
     }
 }
-
 
 .nav-tabs {
     background: #5665be;
@@ -54,37 +58,37 @@
     height: 100%;
 }
 
-.nav-tabs > li {
+.nav-tabs>li {
     float: left;
     margin-bottom: -1px;
 }
 
-.nav-tabs > li > a,
-.nav-tabs > li > a:hover,
-.nav-tabs > li > a:focus {
+.nav-tabs>li>a,
+.nav-tabs>li>a:hover,
+.nav-tabs>li>a:focus {
     background-color: transparent;
     border: 0;
     color: #ffffff;
     font-weight: 500;
 }
 
-.nav-tabs > li.active > a,
-.nav-tabs > li.active > a:hover,
-.nav-tabs > li.active > a:focus {
+.nav-tabs>li.active>a,
+.nav-tabs>li.active>a:hover,
+.nav-tabs>li.active>a:focus {
     background-color: transparent;
     border: 0;
     color: #ffffff;
     font-weight: 500;
 }
 
-.nav-tabs > li.disabled > a,
-.nav-tabs > li.disabled > a:hover {
+.nav-tabs>li.disabled>a,
+.nav-tabs>li.disabled>a:hover {
     color: rgba(255, 255, 255, 0.5);
 }
 
-.dropdown-menu > .active > a,
-.dropdown-menu > .active > a:focus,
-.dropdown-menu > .active > a:hover {
+.dropdown-menu>.active>a,
+.dropdown-menu>.active>a:focus,
+.dropdown-menu>.active>a:hover {
     color: #fff;
     text-decoration: none;
     background-color: #5665be;
@@ -107,14 +111,13 @@
     background-color: #ffffff;
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
-    border: 1px solid #ccc;
     border: 0px solid rgb(5, 21, 21);
     border-radius: 4px;
     -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
 
-.dropdown-menu > li > a {
+.dropdown-menu>li>a {
     display: block;
     padding: 3px 20px;
     clear: both;
@@ -124,19 +127,16 @@
     white-space: nowrap;
 }
 
-.dropdown-menu > li > a:focus,
-.dropdown-menu > li > a:hover {
+.dropdown-menu>li>a:focus,
+.dropdown-menu>li>a:hover {
     color: #5665be;
     text-decoration: none;
     background-color: #f6f6f6;
 }
 
-
 .caret {
     padding-top: 5px;
 }
-
-
 
 .main-view {
     width: 100%;
@@ -152,11 +152,9 @@
     }
 }
 
-
 .main-title {
     padding: 20px 25px;
     margin-bottom: 0;
-    color: inherit;
     background-color: #282d57;
     color: #fff;
     display: block;
