--- a/css/themes/custom/material/components_css/crn-navbar.css
+++ b/css/themes/custom/material/components_css/crn-navbar.css
@@ -129,9 +129,9 @@
 
 .dropdown-menu>li>a:focus,
 .dropdown-menu>li>a:hover {
-    color: #5665be;
+    color: #f6f6f6;
     text-decoration: none;
-    background-color: #f6f6f6;
+    background-color: #5665be;
 }
 
 .caret {
