--- a/css/themes/custom/material/custom-material.css
+++ b/css/themes/custom/material/custom-material.css
@@ -258,22 +258,27 @@ div .messages {
     border-color: #f31700;
 }
 
-.navbar-default .navbar-nav ul.dropdown-menu a i,
-.navbar-default .navbar-nav ul.dropdown-menu li a{
-    color: #393939;
-}
-
-.navbar-default .navbar-nav ul.dropdown-menu a:hover i,
-.navbar-default .navbar-nav ul.dropdown-menu li a:hover{
-    color: #ffffff;
-}
-
 .dropdown-menu li a {
     display: block;
     padding: 3px 20px;
     clear: both;
     font-weight: 400;
     line-height: 1.42857143;
-    color: #393939;
     white-space: nowrap;
+}
+
+.crn-navigator-horizontal .navbar-default .navbar-nav ul.dropdown-menu a i,
+.crn-navigator-horizontal .navbar-default .navbar-nav ul.dropdown-menu li a {
+    color: #393939;
+}
+
+.crn-navigator-horizontal .navbar-default .navbar-nav ul.dropdown-menu a:hover i,
+.crn-navigator-horizontal .navbar-default .navbar-nav ul.dropdown-menu li a:hover {
+    color: #ffffff;
+}
+
+.crn-navigator-vertical .navbar-default .navbar-nav ul.dropdown-menu li a,
+.crn-navigator-vertical .navbar-default .navbar-nav ul.dropdown-menu a:hover i,
+.crn-navigator-vertical .navbar-default .navbar-nav ul.dropdown-menu li a:hover {
+    color: #ffffff;
 }
