CRONAPP-4423 - Ajustes finais no layout horizontal

--- a/components/templates/grid-horizontal.template.html
+++ b/components/templates/grid-horizontal.template.html
@@ -1,4 +1,4 @@
 <div class="layout-horizontal">
-    <div class="col-layout-horizontal" data-container="true" data-replace="true">Content goes here</div>
-    <div class="col-layout-horizontal" data-container="true" data-replace="true">Content goes here</div>
+    <div data-container="true" data-replace="true" class="col-md-6">Content goes here</div>
+    <div data-container="true" data-replace="true" class="col-md-6">Content goes here</div>
 </div>
