CRONAPP-4279 - Níveis hierárquicos no menu Web (#642)
**Problema**
O componente web Menu Dinâmico não suporta n níveis

**Solução**
Ajustado o css e a diretiva cronDynamicMenu para carregar todos os n níveis.

--- a/css/app.css
+++ b/css/app.css
@@ -610,3 +610,26 @@ img.user-avatar {
 .k-pdf-export * {
     font-family: 'Arial-Report';
 }
+
+/* cronDynamicMenu */
+
+.nav.navbar-nav .dropdown-submenu:hover>ul.dropdown-menu {
+    display: block;
+}
+
+.nav.navbar-nav .dropdown-submenu>.dropdown-menu {
+    margin-top: -31px;
+    top: unset;
+    left: 100%;
+}
+
+.nav.navbar-nav .caret{
+    margin-left: 9px;
+    border-top: 5px dashed;
+    border-right: 5px solid transparent;
+    border-left: 5px solid transparent;
+}
+
+.nav.navbar-nav .caret.submenu {    
+    transform: rotate(272deg);
+}
