--- a/css/app.css
+++ b/css/app.css
@@ -603,7 +603,7 @@ img.user-avatar {
 
 @font-face {
     font-family: 'Arial-Report';
-    src: url('../../../node_modules/cronapp-lib-js/dist/js/kendo-ui/styles/fonts/arial-report/arial-report.ttf');
+    src: url('../../../../node_modules/cronapp-lib-js/dist/js/kendo-ui/styles/fonts/arial-report/arial-report.ttf');
 }
 
 .k-pdf-export,
