CRONAPP-4279 - Ajuste de multinivéis dos Níveis hierárquicos no menu Web

--- a/css/themes/custom/navigator/custom-navigator.css
+++ b/css/themes/custom/navigator/custom-navigator.css
@@ -163,7 +163,7 @@
 
 @media only screen and (min-width: 768px) {
     .crn-navigator-vertical>.navbar>.container-fluid>.navbar-collapse>.navbar-nav .dropdown-menu {
-        /* margin-left: -11px; */
+        margin-left: 11px;
     }
 }
 
