--- a/css/app.css
+++ b/css/app.css
@@ -2,7 +2,7 @@
 @import 'reset_password.css';
 @import 'modalTemplate.css';
 @import 'animate.css';
-@import './privacy/privacy.css';
+@import 'privacy/privacy.css';
 @import '../components/css/color-default.css';
 
 /* Directive crn-input-password */
