--- a/css/app.css
+++ b/css/app.css
@@ -345,8 +345,8 @@ fieldset[disabled] .btn-default:hover {
 
 /* cronDynamicMenu */
 
-.nav.navbar-nav .dropdown-submenu:hover>ul.dropdown-menu {
-    display: block;
+.displayBlock{
+    display: block !important;
 }
 
 .nav.navbar-nav .dropdown-submenu>.dropdown-menu {
