--- a/css/app.css
+++ b/css/app.css
@@ -613,8 +613,8 @@ img.user-avatar {
 
 /* cronDynamicMenu */
 
-.nav.navbar-nav .dropdown-submenu:hover>ul.dropdown-menu {
-    display: block;
+.displayBlock{
+    display: block !important;
 }
 
 .nav.navbar-nav .dropdown-submenu>.dropdown-menu {
