--- a/css/app.css
+++ b/css/app.css
@@ -367,19 +367,19 @@ fieldset[disabled] .btn-default:hover {
 }
 
 /* Accordion */
-.panel-group .panel-heading {
+.panel-group .panel-heading.heading-arrow {
     display: grid;
     grid-template-columns: auto 33px;
     align-items: center;
 }
 
-.panel-group .panel-heading::after {
+.panel-group .heading-arrow.panel-heading::after {
     font-family: FontAwesome;
     content: "\f077";
     float: right;
     color: #FFFFFF;
 }
 
-.panel-group .collapsed.panel-heading::after{
+.panel-group .heading-arrow.collapsed.panel-heading::after{
     content: "\f078";
 }
