--- a/css/app.css
+++ b/css/app.css
@@ -365,3 +365,21 @@ fieldset[disabled] .btn-default:hover {
 .nav.navbar-nav .caret.submenu {    
     transform: rotate(272deg);
 }
+
+/* Accordion */
+.panel-group .panel-heading.heading-arrow {
+    display: grid;
+    grid-template-columns: auto 33px;
+    align-items: center;
+}
+
+.panel-group .heading-arrow.panel-heading::after {
+    font-family: FontAwesome;
+    content: "\f077";
+    float: right;
+    color: #FFFFFF;
+}
+
+.panel-group .heading-arrow.collapsed.panel-heading::after{
+    content: "\f078";
+}
