--- a/css/app.css
+++ b/css/app.css
@@ -640,3 +640,21 @@ img.user-avatar {
     overflow: hidden;
     overflow-y: auto;
 }
+
+/* Accordion */
+.panel-group .panel-heading.heading-arrow {
+    display: grid;
+    grid-template-columns: auto 33px;
+    align-items: center;
+}
+
+.panel-group .heading-arrow.panel-heading::after {
+    font-family: FontAwesome;
+    content: "\f077";
+    float: right;
+    color: #FFFFFF;
+}
+
+.panel-group .heading-arrow.collapsed.panel-heading::after{
+    content: "\f078";
+}
