CRONAPP-4310 - Menu vertical do tema Cerulean

--- a/css/themes/custom/navigator/custom-navigator.css
+++ b/css/themes/custom/navigator/custom-navigator.css
@@ -18,7 +18,7 @@
     .crn-navigator-vertical {
         height: 100%;
         width: 19vw;
-        display: fixed;
+        position: fixed;
         float: left;
     }
 }
