--- a/css/app.css
+++ b/css/app.css
@@ -343,6 +343,13 @@ fieldset[disabled] .btn-default:hover {
     font-family: 'Arial-Report';
 }
 
+/* CRONAPP 4621 - Possuir mecanismos de validação reativa */
+.k-invalid-msg{
+    color: red!important;
+    border: none!important;
+}
+
+
 /* cronDynamicMenu */
 
 .displayBlock{
