--- a/css/app.css
+++ b/css/app.css
@@ -611,6 +611,13 @@ img.user-avatar {
     font-family: 'Arial-Report';
 }
 
+/* CRONAPP 4621 - Possuir mecanismos de validação reativa */
+.k-invalid-msg{
+    color: red!important;
+    border: none!important;
+}
+
+
 /* cronDynamicMenu */
 
 .displayBlock{
