CRONAPP-4621 - 2.8.x - Possuir mecanismos de validação reativa (#713)
* CRONAPP-4621 - Possuir mecanismos de validação reativa
**Problema**
Incluir texto da validação reativa
**Melhoria**:
Ajustes na biblioteca do KENDO e nas propriedades dos componentes para incluir a propriedade "Texto quando requerido".

--- a/css/app.css
+++ b/css/app.css
@@ -343,6 +343,12 @@ fieldset[disabled] .btn-default:hover {
     font-family: 'Arial-Report';
 }
 
+.k-invalid-msg{
+    color: red!important;
+    border: none!important;
+}
+
+
 /* cronDynamicMenu */
 
 .displayBlock{
