--- a/css/app.css
+++ b/css/app.css
@@ -611,6 +611,12 @@ img.user-avatar {
     font-family: 'Arial-Report';
 }
 
+.k-invalid-msg{
+    color: red!important;
+    border: none!important;
+}
+
+
 /* cronDynamicMenu */
 
 .displayBlock{
