--- a/components/templates/cron-autocomplete.designtime.html
+++ b/components/templates/cron-autocomplete.designtime.html
@@ -1,3 +1,6 @@
-<span class="k-widget k-autocomplete cronAutoComplete" style="width: 100%;">
-    <input class="cronAutoComplete k-input" type="text">
-</span>
+<div class="form-group" id="${COMPONENTID}">
+    <label for="cron-${COMPONENTID}">Label</label>
+    <span class="k-widget k-autocomplete cronAutoComplete" style="width: 100%;">
+        <input class="cronAutoComplete k-input" type="text">
+    </span>
+</div>
