--- a/css/app.css
+++ b/css/app.css
@@ -664,3 +664,7 @@ img.user-avatar {
 .panel-group .heading-arrow.collapsed.panel-heading::after{
     content: "\f078";
 }
+
+.form-group div{
+    display: contents;
+}
