--- a/components/css/color-default.css
+++ b/components/css/color-default.css
@@ -2,6 +2,7 @@
 @import 'combobox-color.css';
 @import 'option-color.css';
 @import 'image.css';
+@import 'font-size.css';
 
 :root {
     --white: #ffffff;
