--- a/components/templates/rating.template.html
+++ b/components/templates/rating.template.html
@@ -1,9 +1,9 @@
-<div>
-    <cronapp-rating ng-model="vars.evaluation${RANDOM}" icon-off="fa fa-star-o" xattr-default-value="">
-        <i style="font-size: 200%;" icon-theme="color: #3A3A3A;"  icon-size="" class="component-holder fa fa-star"></i>
-        <i style="font-size: 200%;" icon-theme="color: #3A3A3A;"  icon-size="" class="component-holder fa fa-star"></i>
-        <i style="font-size: 200%;" icon-theme="color: #3A3A3A;"  icon-size="" class="component-holder fa fa-star"></i>
-        <i style="font-size: 200%;" icon-theme="color: #3A3A3A;"  icon-size="" class="component-holder fa fa-star"></i>
-        <i style="font-size: 200%;" icon-theme="color: #3A3A3A;"  icon-size="" class="component-holder fa fa-star"></i>
+<div class="component-holder ng-scope" data-component="crn-rating" id="crn-rating-${RANDON}">
+    <cronapp-rating ng-model="vars.evaluation${RANDOM}" icon-off="fa fa-star-o" icon-on="fa fa-star" xattr-default-value="">
+        <i icon-theme="color-theme" icon-size="font-size-20" class="color-theme font-size-20"></i>
+        <i icon-theme="color-theme" icon-size="font-size-20" class="color-theme font-size-20"></i>
+        <i icon-theme="color-theme" icon-size="font-size-20" class="color-theme font-size-20"></i>
+        <i icon-theme="color-theme" icon-size="font-size-20" class="color-theme font-size-20"></i>
+        <i icon-theme="color-theme" icon-size="font-size-20" class="color-theme font-size-20"></i>
     </cronapp-rating>
 </div>
