--- a/components/templates/textinputbutton.template.html
+++ b/components/templates/textinputbutton.template.html
@@ -3,5 +3,7 @@
     <div class="input-group">
         <input id="inputButton${RANDOM}" type="text" mask="" mask-placeholder="" ng-required="false" class="form-control k-textbox" ng-model="vars.input${RANDOM}" placeholder="Placeholder text">
     </div>
-    <button class="btn component-holder btn-success k-button" type="submit" ng-click="" xattr-size="" xattr-fullsize="" xattr-theme="btn-succes" data-component="crn-button" id="crn-button-${RANDOM}"><i class=""></i><span>Button</span></button>
+    <div class="component-holder ng-scope crn-button-form-group" data-component="crn-button" id="crn-button-${RANDOM}">
+        <button class="btn k-button btn-default" type="submit" ng-click="" xattr-fullsize="" xattr-theme="btn-default" xattr-disabled=""><i class="" icon-theme="color-theme"></i> <span class="color-theme" text-theme="color-theme">Button</span></button>
+    </div>
 </div>
