CRONAPP-4590 - Ajustes na inserção dos componentes no editor

--- a/components/templates/rating.template.html
+++ b/components/templates/rating.template.html
@@ -1,9 +1,9 @@
 <div class="component-holder ng-scope" data-component="crn-rating" id="crn-rating-${RANDON}">
-    <cronapp-rating ng-model="vars.evaluation${RANDOM}" icon-off="fa fa-star-o" icon-on="fa fa-star" xattr-default-value="">
-        <i icon-theme="color-theme" icon-size="font-size-20" class="color-theme font-size-20"></i>
-        <i icon-theme="color-theme" icon-size="font-size-20" class="color-theme font-size-20"></i>
-        <i icon-theme="color-theme" icon-size="font-size-20" class="color-theme font-size-20"></i>
-        <i icon-theme="color-theme" icon-size="font-size-20" class="color-theme font-size-20"></i>
-        <i icon-theme="color-theme" icon-size="font-size-20" class="color-theme font-size-20"></i>
+    <cronapp-rating ng-model="vars.evaluation${RANDOM}" icon-off="fa fa-star-o" xattr-default-value="">
+        <i data-theme="color-theme" data-size="font-size-theme" class="fa fa-star color-theme font-size-theme"></i>
+        <i data-theme="color-theme" data-size="font-size-theme" class="fa fa-star color-theme font-size-theme"></i>
+        <i data-theme="color-theme" data-size="font-size-theme" class="fa fa-star color-theme font-size-theme"></i>
+        <i data-theme="color-theme" data-size="font-size-theme" class="fa fa-star color-theme font-size-theme"></i>
+        <i data-theme="color-theme" data-size="font-size-theme" class="fa fa-star color-theme font-size-theme"></i>
     </cronapp-rating>
 </div>
