--- a/components/templates/social-button-bar.template.html
+++ b/components/templates/social-button-bar.template.html
@@ -1,12 +1,11 @@
-<div class="component-holder ng-binding ng-scope col-xs-12 col-md-12" data-component="crn-social-login"
-  id="crn-social-login${RANDOM}">
+<div class="component-holder ng-binding ng-scope col-xs-12 col-md-12" data-component="crn-social-login" id="crn-social-login${RANDOM}">
   <ul class="list-inline center-block text-center">
     <li data-container="true">
       <form action="/signin/facebook" method="POST" id="facebook">
         <input type="hidden" name="scope" value="email,public_profile">
         <a title="Facebook" role="button" onclick="document.getElementById('facebook').submit();">
-          <div data-component="crn-icon" class="component-holder" id="crn-icon-${RANDOM}">
-            <i class="fa fa-2x fa-facebook" style="color: #3A3A3A;" icon-theme="" icon-theme="" icon-size=""></i>
+          <div class="component-holder ng-scope" data-component="crn-icon" id="crn-icon-${RANDOM}">
+            <i class="fa fa-2x fa-facebook font-size-theme color-theme" icon-size="font-size-theme" icon-theme="color-theme"></i>
           </div>
         </a>
       </form>
@@ -15,8 +14,8 @@
       <form action="/signin/github" method="POST" id="github">
         <input type="hidden" name="scope" value="email,public_profile">
         <a title="GitHub" role="button" onclick="document.getElementById('github').submit();">
-          <div data-component="crn-icon" class="component-holder" id="crn-icon-${RANDOM}">
-            <i class="fa fa-2x fa-github-alt" style="color: #3A3A3A;" icon-theme="" icon-theme="" icon-size=""></i>
+          <div class="component-holder ng-scope" data-component="crn-icon" id="crn-icon-${RANDOM}">
+            <i class="fa fa-2x fa-github-alt font-size-theme color-theme" icon-size="font-size-theme" icon-theme="color-theme"></i>
           </div>
         </a>
       </form>
@@ -25,8 +24,8 @@
       <form action="/signin/linkedin" method="POST" id="linkedin">
         <input type="hidden" name="scope" value="r_emailaddress">
         <a title="LinkedIn" role="button" onclick="document.getElementById('linkedin').submit();">
-          <div data-component="crn-icon" class="component-holder" id="crn-icon-${RANDOM}">
-            <i class="fa fa-2x fa-linkedin-square" style="color: #3A3A3A;" icon-theme="" icon-theme="" icon-size=""></i>
+          <div class="component-holder ng-scope" data-component="crn-icon" id="crn-icon-${RANDOM}">
+            <i class="fa fa-2x fa-linkedin-square font-size-theme color-theme" icon-size="font-size-theme" icon-theme="color-theme"></i>
           </div>
         </a>
       </form>
@@ -35,8 +34,8 @@
       <form action="/signin/google" method="POST" id="google">
         <input type="hidden" name="scope" value="email">
         <a title="Google" role="button" onclick="document.getElementById('google').submit();">
-          <div data-component="crn-icon" class="component-holder" id="crn-icon-${RANDOM}">
-            <i class="fa fa-2x fa-google" style="color: #3A3A3A;" icon-theme="" icon-theme="" icon-size=""></i>
+          <div class="component-holder ng-scope" data-component="crn-icon" id="crn-icon-${RANDOM}">
+            <i class="fa fa-2x fa-google font-size-theme color-theme" icon-size="font-size-theme" icon-theme="color-theme"></i>
           </div>
         </a>
       </form>
@@ -45,8 +44,8 @@
       <form action="/signin/cronapp" method="POST" id="cronapp">
         <input type="hidden" name="scope" value="email">
         <a title="CronApp" role="button" onclick="document.getElementById('cronapp').submit();">
-          <div data-component="crn-icon" class="component-holder" id="crn-icon-${RANDOM}">
-            <i class="fa fa-2x fa-cloud" style="color: #3A3A3A;" icon-theme="" icon-theme="" icon-size=""></i>
+          <div class="component-holder ng-scope" data-component="crn-icon" id="crn-icon-${RANDOM}">
+            <i class="fa fa-2x fa-cloud font-size-theme color-theme" icon-size="font-size-theme" icon-theme="color-theme"></i>
           </div>
         </a>
       </form>
