--- a/css/app.css
+++ b/css/app.css
@@ -623,6 +623,10 @@ img.user-avatar {
     display: block !important;
 }
 
+.nav.navbar-nav .dropdown-submenu:hover>ul.dropdown-menu{
+    display: block;
+}
+
 .nav.navbar-nav .dropdown-submenu>.dropdown-menu {
     margin-top: -31px;
     top: unset;
