CRONAPP-4742 - Designtime do componente entrada de senha está quebrado

--- a/components/templates/crn-input-password.designtime.html
+++ b/components/templates/crn-input-password.designtime.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div class="form-group crn-input-password-designtime">
     <label for="input${RANDOM}">Label</label>
     <div class="cardinput">
         <input class="form-control k-textbox" id="input${RANDOM}" placeholder="Placeholder text">
