CRONAPP-4590 - Ajustes na inserção dos componentes no editor (#721)
* ajustes 1

* desenvolvimento 5-10

* CRONAPP-4590 - Ajustes na inserção dos componentes no editor

--- a/components/css/color-default.css
+++ b/components/css/color-default.css
@@ -1,6 +1,8 @@
 @import 'checkbox-color.css';
 @import 'combobox-color.css';
 @import 'option-color.css';
+@import 'image.css';
+@import 'font-size.css';
 
 :root {
     --white: #ffffff;
