--- a/components/templates/fileupload-button.template.html
+++ b/components/templates/fileupload-button.template.html
@@ -1,4 +1,4 @@
-<label class="btn btn-default" xattr-theme="btn-default">
+<label class="btn btn-primary" xattr-theme="btn-primary">
     <i class="glyphicon glyphicon-cloud-upload"></i> 
     <input type="file" style="display:none" onchange="$('#upload-file-info').html($(this).val().split('\\')[2])">
     <span>Upload</span>
