--- a/components/templates/rating.template.html
+++ b/components/templates/rating.template.html
@@ -1,9 +1,9 @@
-<div class="component-holder ng-scope" data-component="crn-rating" id="crn-rating-${RANDON}">
+<div>
     <cronapp-rating ng-model="vars.evaluation${RANDOM}" icon-off="fa fa-star-o" xattr-default-value="">
-        <i data-theme="color-theme" data-size="font-size-theme" class="fa fa-star color-theme font-size-theme"></i>
-        <i data-theme="color-theme" data-size="font-size-theme" class="fa fa-star color-theme font-size-theme"></i>
-        <i data-theme="color-theme" data-size="font-size-theme" class="fa fa-star color-theme font-size-theme"></i>
-        <i data-theme="color-theme" data-size="font-size-theme" class="fa fa-star color-theme font-size-theme"></i>
-        <i data-theme="color-theme" data-size="font-size-theme" class="fa fa-star color-theme font-size-theme"></i>
+        <i style="font-size: 200%;" icon-theme="color: #3A3A3A;"  icon-size="" class="component-holder fa fa-star"></i>
+        <i style="font-size: 200%;" icon-theme="color: #3A3A3A;"  icon-size="" class="component-holder fa fa-star"></i>
+        <i style="font-size: 200%;" icon-theme="color: #3A3A3A;"  icon-size="" class="component-holder fa fa-star"></i>
+        <i style="font-size: 200%;" icon-theme="color: #3A3A3A;"  icon-size="" class="component-holder fa fa-star"></i>
+        <i style="font-size: 200%;" icon-theme="color: #3A3A3A;"  icon-size="" class="component-holder fa fa-star"></i>
     </cronapp-rating>
 </div>
