--- a/components/templates/button.template.html
+++ b/components/templates/button.template.html
@@ -1,4 +1,4 @@
 <button class="btn k-button btn-block btn-default" ng-click="" xattr-fullsize="btn-block" xattr-theme="btn-default" xattr-disabled="">
-    <i class="glyphicon glyphicon-home color-theme" icon-theme="color-theme"></i>
-    <span class="color-theme" text-theme="color-theme">Button</span>
+    <i class="glyphicon glyphicon-home color-white" icon-theme="color-white"></i>
+    <span class="color-white" text-theme="color-white">Button</span>
 </button>
