--- a/components/templates/textinputbutton.template.html
+++ b/components/templates/textinputbutton.template.html
@@ -1,7 +1,11 @@
-<label class="form-group" for="inputButton${RANDOM}">Label</label>
-<div class="form-inline form-group">
+<div class="form-inline form-group crn-textinputbutton">
+    <label class="form-group" for="inputButton-${RANDOM}">Label</label>
     <div class="input-group">
-        <input id="inputButton${RANDOM}" type="text" mask="" mask-placeholder="" ng-required="false" class="form-control k-textbox" ng-model="vars.input${RANDOM}" placeholder="Placeholder text">
+        <input id="inputButton-${RANDOM}" type="text" mask="" mask-placeholder="" ng-required="false" class="form-control k-textbox" ng-model="vars.input${RANDOM}" placeholder="Placeholder text">
     </div>
-    <button class="btn component-holder btn-success k-button" type="submit" ng-click="" xattr-size="" xattr-fullsize="" xattr-theme="btn-succes" data-component="crn-button" id="crn-button-${RANDOM}"><i class=""></i><span>Button</span></button>
+    <div class="component-holder ng-scope crn-textinputbutton-button" data-component="crn-button" id="crn-button-${RANDOM}">
+        <button class="btn k-button btn-default" ng-click="" xattr-fullsize="" xattr-theme="btn-default" xattr-disabled="">
+            <i class="color-white glyphicon glyphicon-search" icon-theme="color-white"></i>
+        </button>
+    </div>
 </div>
