--- a/css/app.css
+++ b/css/app.css
@@ -668,3 +668,18 @@ img.user-avatar {
 .panel-group .heading-arrow.collapsed.panel-heading::after{
     content: "\f078";
 }
+
+/* Entrada de texto com botão */
+.crn-textinputbutton{
+    display: flex;
+    align-items: center;
+}
+
+.crn-textinputbutton-button{
+    margin-top: 12px;
+}
+
+.crn-textinputbutton-button button{
+    margin: 0;
+    margin-left: 10px;
+}
