--- a/css/app.css
+++ b/css/app.css
@@ -11,12 +11,12 @@
 
 /* END - Directive crn-input-password */
 
-.table.table-borderless>thead>tr>td,
-.table.table-borderless>thead>tr>th,
-.table.table-borderless>tfoot>tr>td,
-.table.table-borderless>tfoot>tr>th,
-.table.table-borderless>tbody>tr>td,
-.table.table-borderless>tbody>tr>th {
+.table.table-borderless > thead > tr > td,
+.table.table-borderless > thead > tr > th,
+.table.table-borderless > tfoot > tr > td,
+.table.table-borderless > tfoot > tr > th,
+.table.table-borderless > tbody > tr > td,
+.table.table-borderless > tbody > tr > th {
     border-top: 0 none transparent;
     border-bottom: 0 none transparent;
 }
@@ -225,10 +225,12 @@ a {
         margin: 7.5px 0;
         width: 100%;
     }
+
     .crn-navigator-horizontal #navbar,
     .float-left-desktop {
         float: none;
     }
+
     img.user-avatar {
         margin-left: 0;
     }
@@ -587,9 +589,11 @@ img.user-avatar {
     .bg-login1 {
         grid-template-columns: repeat(1, 1fr);
     }
+
     .bg-login #container-first {
         border-radius: 14px !important;
     }
+
     .bg-login #container-second {
         display: none;
     }
@@ -611,41 +615,41 @@ img.user-avatar {
     font-family: 'Arial-Report';
 }
 
-.k-invalid-msg{
-    color: red!important;
-    border: none!important;
+.k-invalid-msg {
+    color: red !important;
+    border: none !important;
 }
 
 
 /* cronDynamicMenu */
 
-.displayBlock{
+.displayBlock {
     display: block !important;
 }
 
-.nav.navbar-nav .dropdown-submenu:hover>ul.dropdown-menu{
+.nav.navbar-nav .dropdown-submenu:hover > ul.dropdown-menu {
     display: block;
 }
 
-.nav.navbar-nav .dropdown-submenu>.dropdown-menu {
+.nav.navbar-nav .dropdown-submenu > .dropdown-menu {
     margin-top: -31px;
     top: unset;
     left: 100%;
 }
 
-.nav.navbar-nav .caret{
+.nav.navbar-nav .caret {
     margin-left: 9px;
     border-top: 5px dashed;
     border-right: 5px solid transparent;
     border-left: 5px solid transparent;
 }
 
-.nav.navbar-nav .caret.submenu {    
+.nav.navbar-nav .caret.submenu {
     transform: rotate(272deg);
 }
 
 /* Timeline */
-.crn-timeline-container{
+.crn-timeline-container {
     margin: 30px;
     overflow: hidden;
     overflow-y: auto;
@@ -665,21 +669,29 @@ img.user-avatar {
     color: #FFFFFF;
 }
 
-.panel-group .heading-arrow.collapsed.panel-heading::after{
+.panel-group .heading-arrow.collapsed.panel-heading::after {
     content: "\f078";
 }
 
 /* Entrada de texto com botão */
-.crn-textinputbutton{
+.crn-textinputbutton {
     display: flex;
     align-items: center;
 }
 
-.crn-textinputbutton-button{
+.crn-textinputbutton-button {
     margin-top: 12px;
 }
 
-.crn-textinputbutton-button button{
+.crn-textinputbutton-button button {
     margin: 0;
     margin-left: 10px;
+}
+
+#dialogCookies {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    margin-bottom: 0;
+    background-color: #dfdfdf;
 }
