CRONAPP-4827 - Ajuste do padrão do HTML do componente Entrada de texto com botão

--- a/css/app.css
+++ b/css/app.css
@@ -401,7 +401,7 @@ fieldset[disabled] .btn-default:hover {
 }
 
 .crn-textinputbutton-button{
-    margin-top: 12px;
+    display: inherit;
 }
 
 .crn-textinputbutton-button button{
