CRONAPP-4827 - Ajuste do padrão do HTML do componente Entrada de texto com botão

--- a/css/app.css
+++ b/css/app.css
@@ -676,7 +676,7 @@ img.user-avatar {
 }
 
 .crn-textinputbutton-button{
-    margin-top: 12px;
+    display: inherit;
 }
 
 .crn-textinputbutton-button button{
