--- a/components/templates/textinputbutton.template.html
+++ b/components/templates/textinputbutton.template.html
@@ -5,6 +5,7 @@
         <div class="component-holder ng-scope crn-textinputbutton-button" data-component="crn-button" id="crn-button-${RANDOM}">
             <button class="btn k-button btn-default" ng-click="" xattr-fullsize="" xattr-theme="btn-default" xattr-disabled="">
                 <i class="color-white glyphicon glyphicon-search" icon-theme="color-white"></i>
+                <span></span>
             </button>
         </div>
     </div>
