CRONAPP-4852 - Erro no componente layout vertical

--- a/components/templates/grid-vertical.template.html
+++ b/components/templates/grid-vertical.template.html
@@ -1,4 +1,4 @@
 <div class="layout-vertical">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" data-container="true" data-replace="true">Content goes here</div>
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" data-container="true" data-replace="true">Content goes here</div>
+    <div data-container="true" data-replace="true">Content 1</div>
+    <div data-container="true" data-replace="true">Content 2</div>
 </div>
