--- a/components/templates/rating.template.html
+++ b/components/templates/rating.template.html
@@ -1,7 +1,7 @@
 <cronapp-rating ng-model="vars.evaluation${RANDOM}" icon-off="fa fa-star-o" xattr-default-value="">
-    <i style="font-size: 200%;" icon-theme="color: #3A3A3A;" icon-size="" class="component-holder fa fa-star"></i>
-    <i style="font-size: 200%;" icon-theme="color: #3A3A3A;" icon-size="" class="component-holder fa fa-star"></i>
-    <i style="font-size: 200%;" icon-theme="color: #3A3A3A;" icon-size="" class="component-holder fa fa-star"></i>
-    <i style="font-size: 200%;" icon-theme="color: #3A3A3A;" icon-size="" class="component-holder fa fa-star"></i>
-    <i style="font-size: 200%;" icon-theme="color: #3A3A3A;" icon-size="" class="component-holder fa fa-star"></i>
+    <i icon-theme="color-theme" icon-size="font-size-theme" class="fa fa-star color-theme font-size-theme"></i>
+    <i icon-theme="color-theme" icon-size="font-size-theme" class="fa fa-star color-theme font-size-theme"></i>
+    <i icon-theme="color-theme" icon-size="font-size-theme" class="fa fa-star color-theme font-size-theme"></i>
+    <i icon-theme="color-theme" icon-size="font-size-theme" class="fa fa-star color-theme font-size-theme"></i>
+    <i icon-theme="color-theme" icon-size="font-size-theme" class="fa fa-star color-theme font-size-theme"></i>
 </cronapp-rating>
