--- a/components/templates/cron-dynamic-menu.designtime.html
+++ b/components/templates/cron-dynamic-menu.designtime.html
@@ -1,4 +1,4 @@
-<ul class="nav navbar-nav ng-scope" style="float:left">
+<ul class="nav navbar-nav ng-scope">
   <li ng-if="attrs.options.subMenuOptions" ng-repeat="menu in attrs.options.subMenuOptions"
     class="dropdown crn-menu-item">
     <a class="dropdown-toggle" data-toggle="dropdown">
