--- a/components/templates/cron-breadcrumbs.designtime.html
+++ b/components/templates/cron-breadcrumbs.designtime.html
@@ -1,7 +1,16 @@
-<nav id="navbreadcrumb" class="ng-scope k-widget k-breadcrumb" data-role="breadcrumb" aria-label="Breadcrumb">
-    <div class="k-breadcrumb-input-container" style="display: none;"></div>
-    <ol class="k-breadcrumb-container">
-        <li class="k-breadcrumb-item  k-breadcrumb-root-item "><a href="http://localhost:49272/#/home" class=" k-breadcrumb-root-link  k-breadcrumb-icontext-link" title="Home"><span class="k-icon k-i-home "></span>Home</a><span class="k-breadcrumb-delimiter-icon k-icon k-i-arrow-chevron-right" aria-hidden="true"></span><span class="k-breadcrumb-delimiter-icon k-hidden k-icon k-i-arrow-chevron-right" aria-hidden="true"></span></li>
-        <li class="k-breadcrumb-item  k-breadcrumb-last-item"><a href="http://localhost:49272/#/home/logged/teste" class="  k-breadcrumb-link k-state-disabled" aria-current="page" title="teste">teste</a></li>
-    </ol>
-</nav>
+<ol class="k-breadcrumb-container">
+
+    <li class="k-breadcrumb-item  k-breadcrumb-root-item ">
+        <a class=" k-breadcrumb-root-link  k-breadcrumb-icontext-link" title="Home">
+            <span class="k-icon k-i-home "></span>Home
+        </a>
+
+        <span class="k-breadcrumb-delimiter-icon k-icon k-i-arrow-chevron-right" aria-hidden="true"></span>
+
+    </li>
+
+    <li class="k-breadcrumb-item  k-breadcrumb-last-item">
+        <a class="k-breadcrumb-link k-state-disabled" title="teste">Teste</a>
+    </li>
+
+</ol>
