--- a/css/app.css
+++ b/css/app.css
@@ -408,3 +408,10 @@ fieldset[disabled] .btn-default:hover {
     margin: 0;
     margin-left: 10px;
 }
+
+/* Breadcrumbs */
+#cron-breadcrumbs .k-breadcrumb-container,
+#cron-breadcrumbs .k-breadcrumb-root-item-container {
+    padding: 3px 10px;
+    position: relative;
+}
