CRONAPP-5004 Componente Carrossel não passa os slides

--- a/components/templates/carousel.template.html
+++ b/components/templates/carousel.template.html
@@ -1,4 +1,4 @@
-<div class="carousel slide" data-ride="carousel">
+<div class="carousel slide" data-ride="carousel" id="carousel-${RANDOM}">
   <div class="carousel-inner" role="listbox">
     <div class="item active" data-component="crn-carousel-item" id="crn-carousel-item-1">
       <img data-component="crn-image" alt="First Slide" style="margin: 0 auto; object-fit: cover;" xattr-position=""
@@ -34,13 +34,13 @@
   </ol>
 
   
-  <a style="width: 100px;" href="#carousel-example-generic" class="left carousel-control" role="button" data-slide="prev">
+  <a style="width: 100px;" href="#carousel-${RANDOM}" class="left carousel-control" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
   
   
-  <a href="#carousel-example-generic" class="right carousel-control" role="button" data-slide="next">
+  <a href="#carousel-${RANDOM}" class="right carousel-control" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
