ajuste no desingtime

--- a/components/templates/cron-breadcrumbs.designtime.html
+++ b/components/templates/cron-breadcrumbs.designtime.html
@@ -5,7 +5,7 @@
             <span class="k-breadcrumb-delimiter-icon k-icon k-i-arrow-chevron-right" aria-hidden="true"></span>
         </li>
         <li class="k-breadcrumb-item  k-breadcrumb-last-item">
-            <a class="k-breadcrumb-link k-state-disabled" title="teste">Teste</a>
+            <a class="k-breadcrumb-link k-state-disabled" title="user">User</a>
         </li>
     </ol>
 </div>
