CRONAPP-5085 Agendador não altera para outra exibição além de "DIA"

--- a/css/themes/custom/material_raiz/components_css/crn-scheduler.css
+++ b/css/themes/custom/material_raiz/components_css/crn-scheduler.css
@@ -61,7 +61,7 @@ cron-scheduler a.k-link {
 }
 
 .k-scheduler-views * {
-    background-color: #3b448e;
+     background-color: #3b448e !important;
 }
 
 .k-scheduler-views .k-current-view {
